{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 6,
  "lineage": "67a56c35-d0ee-f62f-55da-c99c53506e5f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "my-insecure-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Open this SG to the world!",
            "from_port": 22,
            "id": "sgrule-2024727051",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-3bde5e7f",
            "security_group_rule_id": "sgr-066b31e88ec07eea2",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "my-overriden-insecure-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Open this SG to the world!",
            "from_port": 443,
            "id": "sgrule-2277212669",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-3bde5e7f",
            "security_group_rule_id": "sgr-0d587a6dd9cc3f723",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}